apps/petclinic/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: petclinic
  namespace: petclinic
  labels:
    app.kubernetes.io/name: petclinic
    app: petclinic
    environment: dev

spec:
  replicas: 3
  revisionHistoryLimit: 5 # (ReplicaSets des Deployments für Rollback)
  selector:
    matchLabels:
      app.kubernetes.io/name: petclinic

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1       # max 4 Pods
      maxUnavailable: 1 # min 2 Pods

  template:
    metadata:
      labels:
        app.kubernetes.io/name: petclinic
        app: petclinic
        environment: dev

    spec:
      containers:
        - name: petclinic
          image: docker.io/springcommunity/spring-petclinic:3.5.6
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 768Mi
          volumeMounts:
            - name: sidecar-logs
              mountPath: /var/log/petclinic

        - name: sidecar-container
          image: busybox:1.36
          command:
            - sh
            - -c
            - |
              echo "Waiting for application.log..."
              until [ -f /var/log/petclinic/application.log ]; do
                sleep 1
              done
              echo "application.log found"
              exec tail -f /var/log/petclinic/application.log
          volumeMounts:
            - name: sidecar-logs
              mountPath: /var/log/petclinic

      volumes:
        - name: sidecar-logs
          emptyDir: {}
