apps/petclinic/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: petclinic
  namespace: petclinic
  labels:
    app.kubernetes.io/name: petclinic
    app: petclinic
    environment: dev

spec:
  replicas: 3

  serviceName: petclinic

  selector:
    matchLabels:
      app.kubernetes.io/name: petclinic

  updateStrategy:
    type: RollingUpdate

  template:
    metadata:
      labels:
        app.kubernetes.io/name: petclinic
        app: petclinic
        environment: dev

    spec:
      containers:
        - name: petclinic
          image: docker.io/springcommunity/spring-petclinic:3.5.6
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 768Mi
          volumeMounts:
            - name: sidecar-logs
              mountPath: /var/log/petclinic
            - name: data
              mountPath: /data

        - name: sidecar-container
          image: busybox:1.36
          command:
            - sh
            - -c
            - |
              echo "Waiting for application.log..."
              until [ -f /var/log/petclinic/application.log ]; do
                sleep 1
              done
              echo "application.log found"
              exec tail -f /var/log/petclinic/application.log
          volumeMounts:
            - name: sidecar-logs
              mountPath: /var/log/petclinic

      volumes:
        - name: sidecar-logs
          emptyDir: {}

  volumeClaimTemplates:
      - metadata:
          name: data
        spec:
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 1Gi
