apps/petclinic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: petclinic
  labels:
    app.kubernetes.io/name: petclinic
    app: petclinic
    environment: dev
    
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: petclinic
