apps/petclinic/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: petclinic.htdom.lan
  namespace: petclinic
  labels:
    app.kubernetes.io/name: petclinic
    app: petclinic
    environment: dev
  annotations:
    cert-manager.io/clusterissuer: htdom-sub-ca
    
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - petclinic.htdom.lan
    secretName: petclinic-pki-secret
  rules:
  - host: petclinic.htdom.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: petclinic
            port:
              number: 8080
